@@ -2,56 +2,42 @@
 set -e
 
 case "$1" in
-    remove)
-        #Check for systemd or initd
-        if [ $(ps -p 1 -o comm=) = "systemd" ]; then
-            # Stop, disable and remove drlm-stord.service
-            systemctl is-active --quiet drlm-stord.service && systemctl stop drlm-stord.service
-            systemctl is-enabled --quiet drlm-stord.service && systemctl disable drlm-stord.service
-            [ -f /etc/systemd/system/drlm-stord.service ] && rm /etc/systemd/system/drlm-stord.service
-            # Stop, disable and remove drlm-stord.service
-            systemctl is-active --quiet drlm-api.service && systemctl stop drlm-api.service
-            systemctl is-enabled --quiet drlm-api.service && systemctl disable drlm-api.service
-            [ -f /etc/systemd/system/drlm-api.service ] && rm /etc/systemd/system/drlm-api.service
-            systemctl daemon-reload
-        else
-            service drlm-stord stop
-            update-rc.d drlm-stord remove
-            [ -f /etc/init.d/drlm-stord ] && rm /etc/init.d/drlm-stord
-        fi
+  remove)
+    # Stop, disable and remove drlm-stord.service
+    systemctl is-active --quiet drlm-stord.service && systemctl stop drlm-stord.service
+    systemctl is-enabled --quiet drlm-stord.service && systemctl disable drlm-stord.service
+    [ -f /etc/systemd/system/drlm-stord.service ] && rm /etc/systemd/system/drlm-stord.service
+    # Stop, disable and remove drlm-stord.service
+    systemctl is-active --quiet drlm-api.service && systemctl stop drlm-api.service
+    systemctl is-enabled --quiet drlm-api.service && systemctl disable drlm-api.service
+    [ -f /etc/systemd/system/drlm-api.service ] && rm /etc/systemd/system/drlm-api.service
+    systemctl daemon-reload
 
-        #Save the old database
-        [ -f /usr/sbin/drlm ] && drlm_ver="$(awk 'BEGIN { FS="=" } /^VERSION=/ { print $$2}' /usr/sbin/drlm)"
-        [ -f /var/lib/drlm/drlm.sqlite ] && mv /var/lib/drlm/drlm.sqlite /var/lib/drlm/$drlm_ver-drlm.sqlite.save
-        rm /etc/drlm/cert/drlm.*
-        ;;
+    #Save the old database
+    [ -f /usr/sbin/drlm ] && drlm_ver="$(awk 'BEGIN { FS="=" } /^VERSION=/ { print $$2}' /usr/sbin/drlm)"
+    [ -f /var/lib/drlm/drlm.sqlite ] && mv /var/lib/drlm/drlm.sqlite /var/lib/drlm/$drlm_ver-drlm.sqlite.save
+    rm /etc/drlm/cert/drlm.*
+    ;;
 
-    upgrade)
-        #Check for systemd or initd
-        if [ $(ps -p 1 -o comm=) = "systemd" ]; then
-            # Stop, disable and remove drlm-stord.service
-            systemctl is-active --quiet drlm-stord.service && systemctl stop drlm-stord.service
-            systemctl is-enabled --quiet drlm-stord.service && systemctl disable drlm-stord.service
-            [ -f /etc/systemd/system/drlm-stord.service ] && rm /etc/systemd/system/drlm-stord.service
-            # Stop, disable and remove drlm-api.service
-            systemctl is-active --quiet drlm-api.service && systemctl stop drlm-api.service
-            systemctl is-enabled --quiet drlm-api.service && systemctl disable drlm-api.service
-            [ -f /etc/systemd/system/drlm-api.service ] && rm /etc/systemd/system/drlm-api.service
-            systemctl daemon-reload
-        else
-            service drlm-stord stop
-            update-rc.d drlm-stord remove
-            [ -f /etc/init.d/drlm-stord ] && rm /etc/init.d/drlm-stord
-        fi
+  upgrade)
+    # Stop, disable and remove drlm-stord.service
+    systemctl is-active --quiet drlm-stord.service && systemctl stop drlm-stord.service
+    systemctl is-enabled --quiet drlm-stord.service && systemctl disable drlm-stord.service
+    [ -f /etc/systemd/system/drlm-stord.service ] && rm /etc/systemd/system/drlm-stord.service
+    # Stop, disable and remove drlm-api.service
+    systemctl is-active --quiet drlm-api.service && systemctl stop drlm-api.service
+    systemctl is-enabled --quiet drlm-api.service && systemctl disable drlm-api.service
+    [ -f /etc/systemd/system/drlm-api.service ] && rm /etc/systemd/system/drlm-api.service
+    systemctl daemon-reload
 
-        #Save the old database
-        [ -f /usr/sbin/drlm ] && drlm_ver="$(awk 'BEGIN { FS="=" } /^VERSION=/ { print $$2}' /usr/sbin/drlm)"
-        [ -f /var/lib/drlm/drlm.sqlite ] && mv /var/lib/drlm/drlm.sqlite /var/lib/drlm/$drlm_ver-drlm.sqlite.save
-        ;;
+    #Save the old database
+    [ -f /usr/sbin/drlm ] && drlm_ver="$(awk 'BEGIN { FS="=" } /^VERSION=/ { print $$2}' /usr/sbin/drlm)"
+    [ -f /var/lib/drlm/drlm.sqlite ] && mv /var/lib/drlm/drlm.sqlite /var/lib/drlm/$drlm_ver-drlm.sqlite.save
+    ;;
 
-    *)
-        exit 0
-        ;;
+  *)
+    exit 0
+    ;;
 
 esac
 
