@@ -11,8 +11,9 @@ drlm (2.4.0) stable release; urgency=high
   * DR file format was changed from RAW to QCOW2 
   * Improved instclient configuration workflow
   * List Unscheduled clients bug fixed
+  * Removed unsupported SysVinit service management
 
- -- Pau Roura <pau@brainupdaters.net>  Tue, 16 Feb 2021 00:00:00 +0100
+ -- Pau Roura <pau@brainupdaters.net>  Thu, 18 Feb 2021 00:00:00 +0100
 
 drlm (2.3.2) stable release; urgency=high
   * Fixed wget package dependency (issue #127)
